# gesel-spec

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: check-install.yaml  doxygenate.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  dir_b7bb1040c2758fe38e3629990c1449b1.html  doxygen_crawl.html  files.html  gesel_8hpp.html  gesel_8hpp_source.html  index.html  namespacegesel.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  validate__database_8hpp.html  validate__database_8hpp_source.html  validate__genes_8hpp.html  validate__genes_8hpp_source.html
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  files_0.js  files_1.js  functions_0.js  namespaces_0.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  searchdata.js
include/gesel/: check_collection_details.hpp  check_genes.hpp  check_indices.hpp  check_set_details.hpp  gesel.hpp  load_ranges.hpp  parse_field.hpp  utils.hpp  validate_database.hpp  validate_genes.hpp
tests/: CMakeLists.txt
tests/src/: check_collection_details.cpp  check_genes.cpp  check_indices.cpp  check_set_details.cpp  load_ranges.cpp  utils.h  validate_database.cpp  validate_genes.cpp
